Fix: bug css flex wrap bug in safari

--- a/client_viten/src/app/admin/create-survey/create-survey.component.scss
+++ b/client_viten/src/app/admin/create-survey/create-survey.component.scss
@@ -20,7 +20,7 @@ md-card {
   }
 
   &.questionObject {
-    flex: 1 1;
+    flex: 1 1 250px;
     margin: 5px;
     max-width: 250px;
     min-width: 250px;
